# reacttscppwasm_tmplate

./: .gitignore  README.md
cpp/: CMakeLists.txt  ifcpp.cpp
reactts/: .eslintrc.js  README.md  package-lock.json  package.json
reactts/public/wasm/: cppmain.wasm  hello.wasm
reactts/src/: App.tsx  cppmain.js
reactts/src/asm-cpp/: hello.cpp  hello.js
src/: MainProcess.cpp  MainProcess.h
wasm/: CMakeLists.txt  cppmain.js  cppmain.wasm  ifwasm.cpp  index.html
